--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
+    "qrcode": "^1.5.4",
     "svelte": "^4.2.9",
     "svelte-check": "^3.6.3",
     "svelte-preprocess": "^5.1.3",
